# brook-agent

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
brook_agent/: __main__.py  agent_steps.py  config.py  llm.py  main.py  session_log.py  terminal_chat.py  tool_loop.py  workspace.py
brook_agent/tools/: __init__.py  find_files.py  find_text.py  read_file.py  registry.py  write_file.py
cmd/agent/: main.go
cmd/brook/: main.go
cmd/brook-gateway/: main.go
cmd/brook-tui/: main.go
config/: agent.example.yaml
doc/: agent-configuration-guide.md  eino-agent-stability-and-recovery.md  eino-agents-and-practices.md  eino-interfaces.md  eino-local-filesystem-tools.md  eino-memory.md  eino-observability.md
internal/: README.md
internal/brookdir/: brookdir.go  default_agent.yaml
internal/business/conversation/: file.go  index.go  turn.go  turn_test.go
internal/business/store/: checkpoint.go  session.go
internal/common/: stream.go  telemetry.go
internal/core/: agent.go
internal/entry/: entry.go  registry.go
internal/frame/: frame.go
internal/gateway/: auth.go  collect.go  errors.go  handler.go  limit.go  server.go  session.go
internal/launcher/: launcher.go  observability.go  session_sync.go
internal/model/: types.go
internal/tui/: clipboard.go  helptext.go  model.go  plain.go  slash_complete.go  styles.go
pkg/a2ui/: emitter.go  types.go
pkg/agentconfig/: atfile.go  atfile_test.go  doc.go  load.go  mode_defaults.go  mode_defaults_test.go  modes.go  patch.go  types.go  validate.go  validate_test.go
scripts/: build_release.sh  install.sh
(+24 files in other folders)
